--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,11 @@
 Package: skiagd
-Title: What the Package Does (One Line, Title Case)
+Title: R wrapper for 'rust-skia'
 Version: 0.0.0.9000
 Authors@R:
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+    person("Akiru", "Kato", , "paithiov909@gmail.com", role = c("aut", "cre"))
+Description: A toy R wrapper for 'rust-skia' <https://github.com/rust-skia/rust-skia>
+    (the rust crate 'skia_safe' <https://rust-skia.github.io/doc/skia_safe/>,
+    a binding for 'Skia' <https://skia.org/>).
 License: MIT + file LICENSE
 Suggests:
     testthat (>= 3.0.0)
