--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,17 +7,19 @@ Description: A toy R wrapper for 'rust-skia' <https://github.com/rust-skia/rust-
     (the rust crate 'skia_safe' <https://rust-skia.github.io/doc/skia_safe/>,
     a binding for 'Skia' <https://skia.org/>).
 License: MIT + file LICENSE
+Imports:
+    grDevices,
+    grid,
+    magick,
+    purrr,
+    rlang,
+    withr
 Suggests:
     testthat (>= 3.0.0)
+LinkingTo:
+    cpp11
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-SystemRequirements: Cargo (Rust's package manager), rustc
-LinkingTo:
-    cpp11
-Imports:
-    grid,
-    grDevices,
-    rlang,
-    purrr
+SystemRequirements: GNU make, Cargo (Rust's package manager), rustc
