--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -5,14 +5,16 @@ PROFILE = @PROFILE@
 # Add flags if necessary
 RUSTFLAGS =
 
-TARGET_DIR = $(CURDIR)/rust/target
+# cxx_build creates symbolic links to whole Rust project in `TARGET_DIR`.
+# Placing this inside the project creates recursive symbolic links, which we must avoid.
+TARGET_DIR = $(CURDIR)/target
+CXXDIR = $(TARGET_DIR)/cxxbridge
+
 LIBDIR = $(TARGET_DIR)/$(TARGET)/$(subst dev,debug,$(PROFILE))
 STATLIB = $(LIBDIR)/libskiagd.a
 # TODO: configure for libfontconfig
 PKG_LIBS = -L$(LIBDIR) -lskiagd -lfontconfig
-
-CXXDIR = $(TARGET_DIR)/cxxbridge/skiagd
-PKG_CXXLIBS = -I$(CXXDIR)/src
+PKG_CXXFLAGS = -I$(CXXDIR)/skiagd/src
 
 SOURCES = $(wildcard *.cpp)
 OBJECTS = lib.rs.o $(SOURCES:.cpp=.o)
@@ -37,7 +39,7 @@ $(STATLIB):
 	    export CARGO_PROFILE_RELEASE_PANIC="abort" && \
 	    cargo +nightly build $(CARGO_BUILD_ARGS) --target $(TARGET) -Zbuild-std=panic_abort,std; \
 	  fi && \
-		$(CXX) $(CPICFLAGS) $(CXXFLAGS) -c $(CXXDIR)/src/lib.rs.cc
+		$(CXX) $(CPICFLAGS) $(CXXFLAGS) -c $(CXXDIR)/skiagd/src/lib.rs.cc
 
 C_clean:
 	rm -Rf $(SHLIB) $(STATLIB) $(OBJECTS)
