--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(Style)
 export(add_circle)
 export(add_line)
 export(add_path)
+export(add_png)
 export(add_point)
 export(add_rect)
 export(as_png)
