--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ S3method(print,Cap__bundle)
 S3method(print,Join)
 S3method(print,Join__bundle)
 S3method(print,PaintProps__bundle)
+S3method(print,PathEffect)
+S3method(print,PathEffect__bundle)
 S3method(print,PointMode)
 S3method(print,PointMode__bundle)
 S3method(print,Style)
