--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(add_png)
 export(add_point)
 export(add_rect)
 export(as_png)
+export(as_recordedplot)
 export(canvas)
 export(col2rgba)
 export(dev_size)
