feat: more PathEffects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,14 @@
 
 S3method("$",BlendMode__bundle)
 S3method("$",Cap__bundle)
+S3method("$",FillType__bundle)
 S3method("$",Join__bundle)
 S3method("$",PointMode__bundle)
 S3method("$",Style__bundle)
 S3method("$<-",savvy_skiagd__sealed)
 S3method("[[",BlendMode__bundle)
 S3method("[[",Cap__bundle)
+S3method("[[",FillType__bundle)
 S3method("[[",Join__bundle)
 S3method("[[",PointMode__bundle)
 S3method("[[",Style__bundle)
@@ -16,9 +18,11 @@ S3method(print,BlendMode)
 S3method(print,BlendMode__bundle)
 S3method(print,Cap)
 S3method(print,Cap__bundle)
+S3method(print,FillType)
+S3method(print,FillType__bundle)
 S3method(print,Join)
 S3method(print,Join__bundle)
-S3method(print,PaintProps__bundle)
+S3method(print,PaintAttrs__bundle)
 S3method(print,PathEffect)
 S3method(print,PathEffect__bundle)
 S3method(print,PointMode)
@@ -27,7 +31,9 @@ S3method(print,Style)
 S3method(print,Style__bundle)
 export(BlendMode)
 export(Cap)
+export(FillType)
 export(Join)
+export(PathEffect)
 export(PointMode)
 export(Style)
 export(add_circle)
@@ -42,6 +48,7 @@ export(canvas)
 export(col2rgba)
 export(dev_size)
 export(draw_img)
+export(freeze)
 export(paint)
 export(with_group)
 importFrom(rlang,env_get)
