--- a/src/Makevars.win.in
+++ b/src/Makevars.win.in
@@ -5,12 +5,16 @@ PROFILE = @PROFILE@
 # Add flags if necessary
 RUSTFLAGS =
 
-# TODO: tweak for windows
-
 TARGET_DIR = $(CURDIR)/rust/target
 LIBDIR = $(TARGET_DIR)/$(TARGET)/$(subst dev,debug,$(PROFILE))
 STATLIB = $(LIBDIR)/libskiagd.a
-PKG_LIBS = -L$(LIBDIR) -lskiagd -lws2_32 -ladvapi32 -luserenv -lbcrypt -lntdll
+
+PKG_CONFIG_NAME = fontconfig
+PKG_CONFIG ?= $(BINPREF)pkg-config
+PKG_LIBS = -L$(LIBDIR) -lskiagd -ladvapi32 -luserenv -lbcrypt -lntdll $(shell $(PKG_CONFIG) --libs $(PKG_CONFIG_NAME))
+
+$(info using $(PKG_CONFIG_NAME) from Rtools)
+PKG_CPPFLAGS := $(shell $(PKG_CONFIG) --cflags $(PKG_CONFIG_NAME))
 
 # Rtools doesn't have the linker in the location that cargo expects, so we need
 # to overwrite it via configuration.
