--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -33,6 +33,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install ninja-build on Windows
+        if: ${{ matrix.config.os == 'windows-latest' }}
+        uses: seanmiddleditch/gha-setup-ninja@v6
+
       - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-r@v2
