tweak Makevars.win.in

--- a/src/Makevars.win.in
+++ b/src/Makevars.win.in
@@ -10,9 +10,13 @@ TARGET_DIR = $(CURDIR)/rust/target
 LIBDIR = $(TARGET_DIR)/$(TARGET)/$(subst dev,debug,$(PROFILE))
 STATLIB = $(LIBDIR)/libskiagd.a
 
+# https://github.com/rust-skia/rust-skia/blob/master/skia-bindings/build_support/platform/windows.rs#L90-L101
 PKG_CONFIG_NAME = fontconfig
 PKG_CONFIG ?= $(BINPREF)pkg-config
-PKG_LIBS = -L$(LIBDIR) -lskiagd -ladvapi32 -luserenv -lbcrypt -lntdll $(shell $(PKG_CONFIG) --libs $(PKG_CONFIG_NAME))
+PKG_LIBS = -L$(LIBDIR) -lskiagd \
+	-ladvapi32 -luserenv -lbcrypt -lntdll \
+	-lusp10 -luser32 -lgdi32 -lfontsub \
+	$(shell $(PKG_CONFIG) --libs $(PKG_CONFIG_NAME))
 
 $(info using $(PKG_CONFIG_NAME) from Rtools)
 PKG_CPPFLAGS := $(shell $(PKG_CONFIG) --cflags $(PKG_CONFIG_NAME))
