--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -53,6 +53,6 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
-          args: 'c("--no-vignettes", "--no-manual", "--ignore-vignettes", "--as-cran")'
+          args: 'c("--no-vignettes", "--no-manual", "--ignore-vignettes")'
           build_args: 'c("--no-build-vignettes", "--no-manual")'
           error-on: '"error"'
