feat: add_rounded_rect, add_diff_rect

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,11 +37,13 @@ export(PathEffect)
 export(PointMode)
 export(Style)
 export(add_circle)
+export(add_diff_rect)
 export(add_line)
 export(add_path)
 export(add_png)
 export(add_point)
 export(add_rect)
+export(add_rounded_rect)
 export(as_png)
 export(as_recordedplot)
 export(canvas)
