feat: shaders (incomplete)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method("$",FillType__bundle)
 S3method("$",Join__bundle)
 S3method("$",PointMode__bundle)
 S3method("$",Style__bundle)
+S3method("$",TileMode__bundle)
 S3method("$<-",savvy_skiagd__sealed)
 S3method("[[",BlendMode__bundle)
 S3method("[[",Cap__bundle)
@@ -13,6 +14,7 @@ S3method("[[",FillType__bundle)
 S3method("[[",Join__bundle)
 S3method("[[",PointMode__bundle)
 S3method("[[",Style__bundle)
+S3method("[[",TileMode__bundle)
 S3method("[[<-",savvy_skiagd__sealed)
 S3method(print,BlendMode)
 S3method(print,BlendMode__bundle)
@@ -27,15 +29,21 @@ S3method(print,PathEffect)
 S3method(print,PathEffect__bundle)
 S3method(print,PointMode)
 S3method(print,PointMode__bundle)
+S3method(print,Shader)
+S3method(print,Shader__bundle)
 S3method(print,Style)
 S3method(print,Style__bundle)
+S3method(print,TileMode)
+S3method(print,TileMode__bundle)
 export(BlendMode)
 export(Cap)
 export(FillType)
 export(Join)
 export(PathEffect)
 export(PointMode)
+export(Shader)
 export(Style)
+export(TileMode)
 export(add_circle)
 export(add_diff_rect)
 export(add_line)
