--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R: c(
     person("Akiru", "Kato", , "paithiov909@gmail.com", role = c("aut", "cre")),
     person("Jeroen", "Ooms", role = "cph"))
 Description: A toy R wrapper for 'rust-skia' <https://github.com/rust-skia/rust-skia>
-    (the rust crate 'skia_safe' <https://rust-skia.github.io/doc/skia_safe/>,
+    (the Rust crate 'skia_safe' <https://rust-skia.github.io/doc/skia_safe/>,
     a binding for 'Skia' <https://skia.org/>).
 License: MIT + file LICENSE
 Depends:
