feat: add `c.Shader`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ S3method("[[",PointMode__bundle)
 S3method("[[",Style__bundle)
 S3method("[[",TileMode__bundle)
 S3method("[[<-",savvy_skiagd__sealed)
+S3method(c,Shader)
 S3method(print,BlendMode)
 S3method(print,BlendMode__bundle)
 S3method(print,Cap)
