feat: add_text, add_textpath

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method("$",BlendMode__bundle)
 S3method("$",Cap__bundle)
 S3method("$",FillType__bundle)
+S3method("$",FontStyle__bundle)
 S3method("$",Join__bundle)
 S3method("$",PointMode__bundle)
 S3method("$",Style__bundle)
@@ -11,6 +12,7 @@ S3method("$<-",savvy_skiagd__sealed)
 S3method("[[",BlendMode__bundle)
 S3method("[[",Cap__bundle)
 S3method("[[",FillType__bundle)
+S3method("[[",FontStyle__bundle)
 S3method("[[",Join__bundle)
 S3method("[[",PointMode__bundle)
 S3method("[[",Style__bundle)
@@ -23,6 +25,8 @@ S3method(print,Cap)
 S3method(print,Cap__bundle)
 S3method(print,FillType)
 S3method(print,FillType__bundle)
+S3method(print,FontStyle)
+S3method(print,FontStyle__bundle)
 S3method(print,Join)
 S3method(print,Join__bundle)
 S3method(print,PaintAttrs__bundle)
@@ -39,6 +43,7 @@ S3method(print,TileMode__bundle)
 export(BlendMode)
 export(Cap)
 export(FillType)
+export(FontStyle)
 export(Join)
 export(PathEffect)
 export(PointMode)
@@ -53,6 +58,8 @@ export(add_png)
 export(add_point)
 export(add_rect)
 export(add_rounded_rect)
+export(add_text)
+export(add_textpath)
 export(as_png)
 export(as_recordedplot)
 export(canvas)
@@ -60,7 +67,10 @@ export(col2rgba)
 export(dev_size)
 export(draw_img)
 export(freeze)
+export(list_font_families)
 export(paint)
+export(text_layout_horizontal)
+export(text_layout_vertical)
 importFrom(rlang,"%||%")
 importFrom(rlang,env_get)
 useDynLib(skiagd, .registration = TRUE)
