feat: modify add-text

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ S3method("[[",PointMode__bundle)
 S3method("[[",Style__bundle)
 S3method("[[",TileMode__bundle)
 S3method("[[<-",savvy_skiagd__sealed)
+S3method(c,PathEffect)
 S3method(c,Shader)
 S3method(print,BlendMode)
 S3method(print,BlendMode__bundle)
@@ -71,6 +72,6 @@ export(list_font_families)
 export(paint)
 export(text_layout_horizontal)
 export(text_layout_vertical)
-importFrom(rlang,"%||%")
+export(text_width)
 importFrom(rlang,env_get)
 useDynLib(skiagd, .registration = TRUE)
