--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,9 @@ export(draw_img)
 export(freeze)
 export(list_font_families)
 export(paint)
+export(path_bounds)
+export(path_interpolate)
+export(path_transform)
 export(text_layout_horizontal)
 export(text_layout_vertical)
 export(text_width)
