feat: add create_mapping

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(as_png)
 export(as_recordedplot)
 export(canvas)
 export(col2rgba)
+export(create_mapping)
 export(dev_size)
 export(draw_img)
 export(freeze)
