feat: add_vertices

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method("$",Join__bundle)
 S3method("$",PointMode__bundle)
 S3method("$",Style__bundle)
 S3method("$",TileMode__bundle)
+S3method("$",VertexMode__bundle)
 S3method("$<-",savvy_skiagd__sealed)
 S3method("[[",BlendMode__bundle)
 S3method("[[",Cap__bundle)
@@ -17,6 +18,7 @@ S3method("[[",Join__bundle)
 S3method("[[",PointMode__bundle)
 S3method("[[",Style__bundle)
 S3method("[[",TileMode__bundle)
+S3method("[[",VertexMode__bundle)
 S3method("[[<-",savvy_skiagd__sealed)
 S3method(c,PathEffect)
 S3method(c,Shader)
@@ -41,6 +43,8 @@ S3method(print,Style)
 S3method(print,Style__bundle)
 S3method(print,TileMode)
 S3method(print,TileMode__bundle)
+S3method(print,VertexMode)
+S3method(print,VertexMode__bundle)
 export(BlendMode)
 export(Cap)
 export(FillType)
@@ -51,6 +55,7 @@ export(PointMode)
 export(Shader)
 export(Style)
 export(TileMode)
+export(VertexMode)
 export(add_circle)
 export(add_diff_rect)
 export(add_line)
@@ -61,6 +66,7 @@ export(add_rect)
 export(add_rounded_rect)
 export(add_text)
 export(add_textpath)
+export(add_vertices)
 export(as_png)
 export(as_recordedplot)
 export(canvas)
