--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(Shader)
 export(Style)
 export(TileMode)
 export(VertexMode)
+export(add_atlas)
 export(add_circle)
 export(add_diff_rect)
 export(add_line)
