--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Imports:
     purrr,
     rlang
 Suggests:
-    magick,
+    fastpng,
     testthat (>= 3.0.0),
     vdiffr
 Config/testthat/edition: 3
