--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,8 @@ S3method(print,FillType)
 S3method(print,FillType__bundle)
 S3method(print,FontStyle)
 S3method(print,FontStyle__bundle)
+S3method(print,ImageFilter)
+S3method(print,ImageFilter__bundle)
 S3method(print,Join)
 S3method(print,Join__bundle)
 S3method(print,PaintAttrs__bundle)
@@ -37,6 +39,7 @@ S3method(print,PathEffect)
 S3method(print,PathEffect__bundle)
 S3method(print,PointMode)
 S3method(print,PointMode__bundle)
+S3method(print,RuntimeEffect__bundle)
 S3method(print,Shader)
 S3method(print,Shader__bundle)
 S3method(print,Style)
@@ -49,9 +52,11 @@ export(BlendMode)
 export(Cap)
 export(FillType)
 export(FontStyle)
+export(ImageFilter)
 export(Join)
 export(PathEffect)
 export(PointMode)
+export(RuntimeEffect)
 export(Shader)
 export(Style)
 export(TileMode)
