--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -21,16 +21,17 @@ $(STATLIB):
 	# to set it here to ensure cargo can be invoked. It is appended to PATH and
 	# therefore is only used if cargo is absent from the user's PATH.
 	export PATH="$(PATH):$(HOME)/.cargo/bin" && \
-	  export CC="$(CC)" && \
-	  export CFLAGS="$(CFLAGS)" && \
-	  export RUSTFLAGS="$(RUSTFLAGS)" && \
-	  if [ "$(TARGET)" != "wasm32-unknown-emscripten" ]; then \
-	    cargo build $(CARGO_BUILD_ARGS); \
-	  else \
-	    export CARGO_PROFILE_DEV_PANIC="abort" && \
-	    export CARGO_PROFILE_RELEASE_PANIC="abort" && \
-	    cargo +nightly build $(CARGO_BUILD_ARGS) --target $(TARGET) -Zbuild-std=panic_abort,std; \
-	  fi
+		export CC="$(CC)" && \
+		export CFLAGS="$(CFLAGS)" && \
+		export RUSTFLAGS="$(RUSTFLAGS)" && \
+		if [ "$(TARGET)" != "wasm32-unknown-emscripten" ]; then \
+			export EMCC_CFLAGS="-s ERROR_ON_UNDEFINED_SYMBOLS=0" && \
+			cargo build $(CARGO_BUILD_ARGS); \
+		else \
+			export CARGO_PROFILE_DEV_PANIC="abort" && \
+			export CARGO_PROFILE_RELEASE_PANIC="abort" && \
+			cargo +nightly build $(CARGO_BUILD_ARGS) --target $(TARGET) -Zbuild-std=panic_abort,std; \
+		fi
 
 clean_intermediate: $(SHLIB)
 	rm -f $(STATLIB)
