--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ S3method(print,TileMode)
 S3method(print,TileMode__bundle)
 S3method(print,VertexMode)
 S3method(print,VertexMode__bundle)
+export("%timer%")
 export(BlendMode)
 export(Cap)
 export(FillType)
