--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,8 +87,7 @@ export(paint)
 export(path_bounds)
 export(path_interpolate)
 export(path_transform)
-export(text_layout_horizontal)
-export(text_layout_vertical)
+export(text_count)
 export(text_width)
 importFrom(rlang,env_get)
 useDynLib(skiagd, .registration = TRUE)
