--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,7 +86,6 @@ export(paint)
 export(path_bounds)
 export(path_interpolate)
 export(path_transform)
-export(text_count)
-export(text_width)
+export(text_info)
 importFrom(rlang,env_get)
 useDynLib(skiagd, .registration = TRUE)
