--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,9 +70,7 @@ export(add_path)
 export(add_png)
 export(add_point)
 export(add_rect)
-export(add_rounded_rect)
 export(add_text)
-export(add_textpath)
 export(add_vertices)
 export(as_png)
 export(as_recordedplot)
@@ -87,8 +85,6 @@ export(paint)
 export(path_bounds)
 export(path_interpolate)
 export(path_transform)
-export(text_layout_horizontal)
-export(text_layout_vertical)
-export(text_width)
+export(text_info)
 importFrom(rlang,env_get)
 useDynLib(skiagd, .registration = TRUE)
