--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ export(Shader)
 export(Style)
 export(TileMode)
 export(VertexMode)
+export(add_arc)
 export(add_atlas)
 export(add_circle)
 export(add_diff_rect)
