feat: as_nativeraster

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ export(add_point)
 export(add_rect)
 export(add_text)
 export(add_vertices)
+export(as_nativeraster)
 export(as_png)
 export(as_recordedplot)
 export(canvas)
