--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -6,9 +6,9 @@ PROFILE = @PROFILE@
 RUSTFLAGS =
 
 # This is passed fine to wasm-ld called by rwasm.
-# However, the build is failing with the current configuration
-# because it seems that `-fPIC` needs to be passed when building Skia for WebR.
-WASM_LDFLAGS = -sERROR_ON_UNDEFINED_SYMBOLS=0 -sMAX_WEBGL_VERSION=2 -sMODULARIZE=1
+# However, the build is failing with the current configuration.
+WASM_LDFLAGS = -fPIC -sERROR_ON_UNDEFINED_SYMBOLS=0 -sMAX_WEBGL_VERSION=2
+SDKTARGETSYSROOT = $(EMSDK)/upstream/emscripten/cache/sysroot
 
 TARGET_DIR = $(CURDIR)/rust/target
 LIBDIR = $(TARGET_DIR)/$(TARGET)/$(subst dev,debug,$(PROFILE))
@@ -34,6 +34,11 @@ $(STATLIB):
 		else \
 			export CARGO_PROFILE_DEV_PANIC="abort" && \
 			export CARGO_PROFILE_RELEASE_PANIC="abort" && \
+			export RUSTFLAGS="$(RUSTFLAGS) -Zdefault-visibility=hidden" && \
+			export SDKTARGETSYSROOT=$(SDKTARGETSYSROOT) && \
+			export FORCE_SKIA_BUILD=1 && \
+			export SKIA_USE_SYSTEM_LIBRARIES=1 && \
+			export SKIA_GN_ARGS='cc="$(EMSDK)/upstream/bin/clang" cxx="$(EMSDK)/upstream/bin/clang++" extra_cflags=[] extra_cflags=["--target=$(TARGET)", "-I$(WEBR_ROOT)/wasm/include", "-I$(SDKTARGETSYSROOT)/include/c++/v1", "-I$(SDKTARGETSYSROOT)/include/compat", "-I$(SDKTARGETSYSROOT)/include", "-I$(EMSDK)/upstream/lib/clang/21/include"] extra_ldflags=["-L/opt/webr/wasm/lib"]' && \
 			cargo +nightly build $(CARGO_BUILD_ARGS) --target $(TARGET) -Zbuild-std=panic_abort,std; \
 		fi
 
@@ -42,5 +47,3 @@ clean_intermediate: $(SHLIB)
 
 clean:
 	rm -Rf $(SHLIB) $(OBJECTS) $(STATLIB) ./rust/target
-
-.PHONY: all clean_intermediate clean
