--- a/src/Makevars.win.in
+++ b/src/Makevars.win.in
@@ -37,6 +37,7 @@ $(STATLIB):
 	  export CC="$(CC)" && \
 	  export CFLAGS="$(CFLAGS)" && \
 	  export RUSTFLAGS="$(RUSTFLAGS)" && \
+		export HOST_CC="$(CC)" && \
 		export FORCE_SKIA_BUILD=1 && \
 		export SKIA_GN_ARGS='cc="$(CC)" cxx="$(CXX)"' && \
 	  cargo build --target $(TARGET) --lib --profile $(PROFILE) --manifest-path ./rust/Cargo.toml --target-dir $(TARGET_DIR) -v
