--- a/src/Makevars.win.in
+++ b/src/Makevars.win.in
@@ -37,9 +37,8 @@ $(STATLIB):
 	  export CC="$(CC)" && \
 	  export CFLAGS="$(CFLAGS)" && \
 	  export RUSTFLAGS="$(RUSTFLAGS)" && \
-		export HOST_CC="$(CC)" && \
 		export FORCE_SKIA_BUILD=1 && \
-		export SKIA_GN_ARGS='cc="$(CC)" cxx="$(CXX)" alink="$(CARGO_LINKER)" solink="$(CARGO_LINKER)"' && \
+		export SKIA_GN_ARGS='is_clang=false target_os="win" target_cpu="x64" cc="$(CC)" cxx="$(CXX)" ld="$(CARGO_LINKER)" extra_cflags=[] extra_cflags=["-static"] extra_ldflags=["-static"]' && \
 	  cargo build --target $(TARGET) --lib --profile $(PROFILE) --manifest-path ./rust/Cargo.toml --target-dir $(TARGET_DIR) -v
 
 clean_intermediate: $(SHLIB)
