--- a/src/Makevars.win.in
+++ b/src/Makevars.win.in
@@ -21,6 +21,10 @@ PKG_LIBS = -L$(LIBDIR) -lskiagd -lbcrypt \
 # Rtools doesn't have the linker in the location that cargo expects, so we need
 # to overwrite it via configuration.
 CARGO_LINKER = x86_64-w64-mingw32.static.posix-gcc.exe
+ifeq $(CARGO_HOME) ""
+	CARGO_HOME = $(TARGET_DIR)
+endif
+$(info using $(CARGO_HOME) as cargo home)
 
 all: $(SHLIB) clean_intermediate
 
@@ -34,11 +38,12 @@ $(STATLIB):
 
 	export CARGO_TARGET_X86_64_PC_WINDOWS_GNU_LINKER="$(CARGO_LINKER)" && \
 	  export LIBRARY_PATH="$${LIBRARY_PATH};$(LIBDIR)/libgcc_mock" && \
-	  export CC="$(CC)" && \
+	  export CARGO_HOME="$(CARGO_HOME)" && \
+		export CC="$(CC)" && \
 	  export CFLAGS="$(CFLAGS)" && \
 	  export RUSTFLAGS="$(RUSTFLAGS)" && \
 		export FORCE_SKIA_BUILD=1 && \
-		export SKIA_GN_ARGS='is_clang=false target_os="win" target_cpu="x64" cc="$(CC)" cxx="$(CXX)" ld="$(CARGO_LINKER)" extra_cflags=[] extra_cflags=["-static"] extra_ldflags=["-static"]' && \
+		export SKIA_GN_ARGS='cc="$(CC)" cxx="$(CXX)" ar="$(AR)" extra_cflags=[] extra_cflags=["-static"] extra_ldflags=["-static"]' && \
 	  cargo build --target $(TARGET) --lib --profile $(PROFILE) --manifest-path ./rust/Cargo.toml --target-dir $(TARGET_DIR) -v
 
 clean_intermediate: $(SHLIB)
