--- a/src/Makevars.win.in
+++ b/src/Makevars.win.in
@@ -21,7 +21,7 @@ PKG_LIBS = -L$(LIBDIR) -lskiagd -lbcrypt \
 # Rtools doesn't have the linker in the location that cargo expects, so we need
 # to overwrite it via configuration.
 CARGO_LINKER = x86_64-w64-mingw32.static.posix-gcc.exe
-ifeq $(CARGO_HOME) ""
+ifeq "$(CARGO_HOME)" ""
 	CARGO_HOME = $(TARGET_DIR)
 endif
 $(info using $(CARGO_HOME) as cargo home)
