--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ S3method("[[",Style__bundle)
 S3method("[[",TileMode__bundle)
 S3method("[[",VertexMode__bundle)
 S3method("[[<-",savvy_skiagd__sealed)
+S3method(c,ImageFilter)
 S3method(c,PathEffect)
 S3method(c,Shader)
 S3method(print,BlendMode)
