docs: rename path-utils exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,9 +90,9 @@ export(draw_img)
 export(freeze)
 export(list_font_families)
 export(paint)
-export(path_bounds)
-export(path_interpolate)
-export(path_transform)
+export(svg_bounds)
+export(svg_interpolate)
+export(svg_transform)
 export(text_info)
 importFrom(rlang,env_get)
 useDynLib(skiagd, .registration = TRUE)
