--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: skiagd
 Title: R Wrapper for 'rust-skia'
-Version: 0.0.0.9012
+Version: 0.1.0
 Authors@R: c(
     person("Akiru", "Kato", , "paithiov909@gmail.com", role = c("aut", "cre")),
-    person("Jeroen", "Ooms", role = "cph"))
+    person("Jeroen", "Ooms", role = "cph")
+  )
 Description: A toy R wrapper for 'rust-skia' <https://github.com/rust-skia/rust-skia>
     (the Rust crate 'skia_safe' <https://rust-skia.github.io/doc/skia_safe/>,
     a binding for 'Skia' <https://skia.org/>).
