--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -13,7 +13,8 @@ SDKTARGETSYSROOT = $(EMSDK)/upstream/emscripten/cache/sysroot
 TARGET_DIR = $(CURDIR)/rust/target
 LIBDIR = $(TARGET_DIR)/$(TARGET)/$(subst dev,debug,$(PROFILE))
 STATLIB = $(LIBDIR)/libskiagd.a
-PKG_LIBS = -L$(LIBDIR) -lskiagd @libs@ $(@SYS@_LIBS)
+PKG_CPPFLAGS = -pthread
+PKG_LIBS = -L$(LIBDIR) -lskiagd @libs@ $(@SYS@_LIBS) -pthread
 
 CARGO_BUILD_ARGS = --lib --profile $(PROFILE) --manifest-path=./rust/Cargo.toml --target-dir $(TARGET_DIR)
 
