--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ export(col2rgba)
 export(create_mapping)
 export(dev_size)
 export(draw_img)
+export(embed_img)
 export(freeze)
 export(list_font_families)
 export(paint)
