refactor: modify 'embed_img'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ S3method("[[<-",savvy_skiagd__sealed)
 S3method(c,ImageFilter)
 S3method(c,PathEffect)
 S3method(c,Shader)
+S3method(data_uri,character)
+S3method(data_uri,raw)
 S3method(print,"skiagd::BlendMode")
 S3method(print,"skiagd::BlendMode__bundle")
 S3method(print,"skiagd::BlurStyle")
@@ -85,6 +87,7 @@ export(as_recordedplot)
 export(canvas)
 export(col2rgba)
 export(create_mapping)
+export(data_uri)
 export(dev_size)
 export(draw_img)
 export(embed_img)
