feat: utils for completion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ export(data_uri)
 export(dev_size)
 export(draw_img)
 export(embed_img)
+export(enable_autocomplete)
 export(freeze)
 export(list_font_families)
 export(paint)
